# opencl-toolkit

./: CMakeLists.txt  README.md
include/: base_buffer.h  buffer_factories.h  command_queue.h  context.h  device_manager.h  error.h  program.h  read_only_buffer.h  write_only_buffer.h
include/opencl/: command_queue.h  context.h  device_manager.h  portable_opencl_include.h  program.h  read_only_buffer.h  write_only_buffer.h
src/: base_buffer.cpp  buffer_factories.cpp  command_queue.cpp  context.cpp  device_manager.cpp  error.cpp  program.cpp  read_only_buffer.cpp  write_only_buffer.cpp
